# yamja

./: README.md  pyproject.toml
tests/: test_load.py  test_merge.py
tests/data/: lookup.yaml
yamja/: __init__.py  yamja.py
