[project]
name = "yamja"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.4",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[project.urls]
Homepage = "https://github.com/mobarski/yamja"
Repository = "https://github.com/mobarski/yamja.git"
